PROJ-1647 Bound transparency stats reads
